# pose_adjustment_demo

./: .gitignore  CMakeLists.txt  README.md  作業手順書.md
include/pose_adjustment/: customfactor.hpp  demo_iridescence.hpp  pose_adjustment.hpp
src/: customfactor.cpp  demo_iridescence.cpp  pose_adjustment_2d.cpp  pose_adjustment_3d.cpp  pose_adjustment_3d_with_customfactor.cpp  small_pose_adjustment_2d.cpp
